// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select check title when label is a object 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <div
        class="rc-select-selection-selected-value"
        style="display:block;opacity:1"
        title="0"
      >
        0
      </div>
      <div
        class="rc-select-search rc-select-search--inline"
        style="display:none"
      >
        <div
          class="rc-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="rc-select-search__field"
            value=""
          />
          <span
            class="rc-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="rc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="rc-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select does not filter when filterOption value is false 1`] = `
Array [
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <div
          class="rc-select-search rc-select-search--inline"
          style="display:block"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
      <span
        class="rc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="rc-select-arrow-icon"
        />
      </span>
    </div>
  </div>,
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--single rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto;transform:translateZ(0)"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            1
          </li>
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            2
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Select filterOption could be true as described in default value 1`] = `
Array [
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <div
          class="rc-select-search rc-select-search--inline"
          style="display:block"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
      <span
        class="rc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="rc-select-arrow-icon"
        />
      </span>
    </div>
  </div>,
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--single rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto;transform:translateZ(0)"
      >
        <ul
          class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            1
          </li>
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="option"
            style="user-select:none;-webkit-user-select:none"
            unselectable="on"
          >
            2
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Select no search 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <div
        class="rc-select-selection-selected-value"
        style="display:block;opacity:1"
        title="1"
      >
        1
      </div>
    </div>
    <span
      class="rc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="rc-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select render renders aria-attributes correctly 1`] = `
<div
  class="select-test antd antd-enabled antd-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="some-label"
    aria-labelledby="test-id"
    class="antd-selection
            antd-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="antd-selection__rendered"
    >
      <div
        class="antd-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a number
      </div>
      <div
        class="antd-selection-selected-value"
        style="display:block;opacity:1"
        title="2"
      >
        2
      </div>
      <div
        class="antd-search antd-search--inline"
        style="display:none"
      >
        <div
          class="antd-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="antd-search__field"
            value=""
          />
          <span
            class="antd-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="antd-selection__clear"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-selection__clear-icon"
      >
        ×
      </i>
    </span>
    <span
      class="antd-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select render renders correctly 1`] = `
<div
  class="select-test antd antd-enabled antd-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="antd-selection
            antd-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="antd-selection__rendered"
    >
      <div
        class="antd-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a number
      </div>
      <div
        class="antd-selection-selected-value"
        style="display:block;opacity:1"
        title="2"
      >
        2
      </div>
      <div
        class="antd-search antd-search--inline"
        style="display:none"
      >
        <div
          class="antd-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="antd-search__field"
            value=""
          />
          <span
            class="antd-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="antd-selection__clear"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-selection__clear-icon"
      >
        ×
      </i>
    </span>
    <span
      class="antd-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select render renders data-attributes correctly 1`] = `
<div
  class="select-test antd antd-enabled antd-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="antd-selection
            antd-selection--single"
    data-id="12345"
    data-test="test-id"
    role="combobox"
    tabindex="0"
  >
    <div
      class="antd-selection__rendered"
    >
      <div
        class="antd-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a number
      </div>
      <div
        class="antd-selection-selected-value"
        style="display:block;opacity:1"
        title="2"
      >
        2
      </div>
      <div
        class="antd-search antd-search--inline"
        style="display:none"
      >
        <div
          class="antd-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="antd-search__field"
            value=""
          />
          <span
            class="antd-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="antd-selection__clear"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-selection__clear-icon"
      >
        ×
      </i>
    </span>
    <span
      class="antd-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select render renders disabeld select correctly 1`] = `
<div
  class="select-test antd antd-disabled antd-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="antd-selection
            antd-selection--single"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="antd-selection__rendered"
    >
      <div
        class="antd-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a number
      </div>
      <div
        class="antd-selection-selected-value"
        style="display:block;opacity:1"
        title="2"
      >
        2
      </div>
      <div
        class="antd-search antd-search--inline"
        style="display:none"
      >
        <div
          class="antd-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="antd-search__field"
            disabled=""
            value=""
          />
          <span
            class="antd-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="antd-selection__clear"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-selection__clear-icon"
      >
        ×
      </i>
    </span>
    <span
      class="antd-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select render renders dropdown correctly 1`] = `
Array [
  <div
    class="select-test antd antd-open antd-focused antd-enabled antd-allow-clear"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="antd-selection
            antd-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="antd-selection__rendered"
      >
        <div
          class="antd-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Select a number
        </div>
        <div
          class="antd-selection-selected-value"
          style="display:block;opacity:0.4"
          title="2"
        >
          2
        </div>
        <div
          class="antd-search antd-search--inline"
          style="display:block"
        >
          <div
            class="antd-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="antd-search__field"
              value=""
            />
            <span
              class="antd-search__field__mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
      <span
        class="antd-selection__clear"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="antd-selection__clear-icon"
        >
          ×
        </i>
      </span>
      <span
        class="antd-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="antd-arrow-icon"
        />
      </span>
    </div>
  </div>,
  <div>
    <div
      class="antd-dropdown antd-dropdown--single antd-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto;transform:translateZ(0)"
      >
        <ul
          class="antd-dropdown-menu  antd-dropdown-menu-root antd-dropdown-menu-vertical"
          role="listbox"
          tabindex="0"
        >
          <li
            class=" antd-dropdown-menu-item-group"
          >
            <div
              class="antd-dropdown-menu-item-group-title"
              title="manager"
            >
              manager
            </div>
            <ul
              class="antd-dropdown-menu-item-group-list"
            >
              <li
                aria-selected="false"
                class="antd-dropdown-menu-item option-test antd-dropdown-menu-item-active"
                role="option"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <b
                  style="color:red"
                >
                  jack
                </b>
              </li>
              <li
                aria-selected="false"
                class="antd-dropdown-menu-item"
                role="option"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                lucy
              </li>
            </ul>
          </li>
          <li
            class=" antd-dropdown-menu-item-group"
          >
            <div
              class="antd-dropdown-menu-item-group-title"
              title="engineer"
            >
              engineer
            </div>
            <ul
              class="antd-dropdown-menu-item-group-list"
            >
              <li
                aria-selected="false"
                class="antd-dropdown-menu-item"
                role="option"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                yiminghe
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Select render renders role prop correctly 1`] = `
<div
  class="select-test antd antd-enabled antd-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="antd-selection
            antd-selection--single"
    role="button"
    tabindex="0"
  >
    <div
      class="antd-selection__rendered"
    >
      <div
        class="antd-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a number
      </div>
      <div
        class="antd-selection-selected-value"
        style="display:block;opacity:1"
        title="2"
      >
        2
      </div>
      <div
        class="antd-search antd-search--inline"
        style="display:none"
      >
        <div
          class="antd-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="antd-search__field"
            value=""
          />
          <span
            class="antd-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="antd-selection__clear"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-selection__clear-icon"
      >
        ×
      </i>
    </span>
    <span
      class="antd-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="antd-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select should contian falsy children 1`] = `
<div
  class="rc-select rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <div
        class="rc-select-selection-selected-value"
        style="display:block;opacity:1"
        title="1"
      >
        1
      </div>
      <div
        class="rc-select-search rc-select-search--inline"
        style="display:none"
      >
        <div
          class="rc-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="rc-select-search__field"
            value=""
          />
          <span
            class="rc-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="rc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="rc-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select should render custom dropdown correctly 1`] = `
Array [
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
            rc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <div
          class="rc-select-search rc-select-search--inline"
          style="display:block"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
      <span
        class="rc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          class="rc-select-arrow-icon"
        />
      </span>
    </div>
  </div>,
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--single rc-select-dropdown-placement-bottomLeft "
    >
      <div>
        <div>
          <div
            class="dropdown-custom-node"
          >
            CUSTOM NODE
          </div>
          <div
            style="overflow:auto;transform:translateZ(0)"
          >
            <ul
              class="rc-select-dropdown-menu  rc-select-dropdown-menu-root rc-select-dropdown-menu-vertical"
              role="listbox"
              tabindex="0"
            >
              <li
                aria-selected="false"
                class="rc-select-dropdown-menu-item rc-select-dropdown-menu-item-active"
                role="option"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                1
              </li>
              <li
                aria-selected="false"
                class="rc-select-dropdown-menu-item"
                role="option"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                2
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
